--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.1.0",
     "sharp": "^0.33.3"
   },
   "devDependencies": {
